# RigControlNative

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  start-emulators.sh
.github/workflows/: ci.yml  release.yml
core/: CMakeLists.txt
core/include/rc/: rc_client.h
core/src/: adb.c  audio.c  client.c  control_msg.c  decoder.c  demuxer.c  miniaudio_impl.c  net.c  rc_internal.h  server_deploy.c
docs/: AGENT_AUTOREGISTER.md  AGENT_PROTOCOL.md  PROTOCOL.md
frontends/agent/: CMakeLists.txt  adb.c  agent.h  discovery.c  main.c  net.c  util.c
frontends/gtk/: CMakeLists.txt  agent.c  chooser.c  input.c  main.c  rcgtk.h  render.c  session.c
frontends/swiftui/: Info.plist  README.md  build-mac.sh  bundle-mac.sh
frontends/swiftui/Sources/: AdbTools.swift  AgentScan.swift  AndroidKeys.swift  ChooserView.swift  EnvConfig.swift  MetalVideoView.swift  RCClient.swift  SessionManager.swift  SessionModel.swift  SessionView.swift  VideoRenderer.swift  main.swift
frontends/swiftui/bridge/: module.modulemap  shim.h
server/: README.md  build.sh
server/src/main/java/com/rigcontrol/server/: AudioEncoder.java  ControlReceiver.java  DesktopConnection.java  DeviceController.java  Options.java  Protocol.java  ScreenEncoder.java  Server.java  Workarounds.java
server/src/main/java/com/rigcontrol/server/wrappers/: DisplayInfo.java  DisplayManager.java  InputManager.java  ServiceManager.java  SurfaceControl.java
